# auto_props

./: Cargo.toml  README.md
proc-macros/: Cargo.toml  common.rs
proc-macros/src/: lib.rs
src/: lib.rs  original.rs
